; ModuleID = '/home/carl/AnghaBench/git/extr_streaming.c_close_deflated_stream.c'
source_filename = "/home/carl/AnghaBench/git/extr_streaming.c_close_deflated_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.git_istream = type { i64, i32 }

@z_used = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.git_istream*)* @close_deflated_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_deflated_stream(%struct.git_istream* %0) #0 {
  %2 = alloca %struct.git_istream*, align 8
  store %struct.git_istream* %0, %struct.git_istream** %2, align 8
  %3 = load %struct.git_istream*, %struct.git_istream** %2, align 8
  %4 = getelementptr inbounds %struct.git_istream, %struct.git_istream* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @z_used, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.git_istream*, %struct.git_istream** %2, align 8
  %10 = getelementptr inbounds %struct.git_istream, %struct.git_istream* %9, i32 0, i32 1
  %11 = call i32 @git_inflate_end(i32* %10)
  br label %12

12:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @git_inflate_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
